# Kiln

./: CLAUDE.md  checks.sh  desktop-docs.md
.github/workflows/: build_desktop.yml  format_and_lint.yml  test_count.yml
.simone/: 00_PROJECT_MANIFEST.md
.simone/01_PROJECT_DOCS/: ARCHITECTURE.md
.simone/02_REQUIREMENTS/M01_Linux_AppImage_Support/: MILESTONE_META.md  R01_Research_and_Documentation.md  R02_Modify_Linux_Build_Process.md  R03_Create_AppImage_Recipe.md  R04_Extend_Build_Script.md  R05_Update_CICD_Pipeline.md
.simone/03_SPRINTS/S01_M01_Research_Build_Foundation/: SPRINT_META.md  T01_RESEARCH_FINDINGS.md  T01_S01_Research_AppImage_Builder_Documentation.md  T02_S01_Research_PyInstaller_OneDirFolder_Requirements.md  T03_S01_Analyze_Kiln_Integration_Points.md  T03_S01_Analyze_Kiln_Integration_Points_COMPLETED.md  T04_S01_Modify_PyInstaller_Build_Configuration.md  T05_S01_Validate_New_Build_Process.md  T06_S01_Document_Implementation_Approach.md  (+1 more)
app/desktop/: .gitignore  build_desktop_app.sh  desktop.py  pyproject.toml
app/desktop/appimage/: AppImageBuilder.template.yml  AppImageBuilder.yml
app/desktop/appimage/desktop/: com.kiln.KilnAI.appdata.template.xml  com.kiln.KilnAI.appdata.xml  com.kiln.KilnAI.desktop  com.kiln.KilnAI.template.desktop
app/desktop/appimage/scripts/: build_icons.py  cleanup.sh  test_build_icons.py  test_update_version.py  update_version.py
contributing/: pyinstaller-with-appimage-tests.md  setup-local-wslg.md  task-linux-appimage-support.md
contributing/good-pr-examples/: 310.md  313.md  320.md  323.md  334.md  336.md
(+1 files in other folders)
