[project]
name = "kiln-studio-desktop"
version = "0.1.0"
description = "The Kiln Desktop App. Download from https://getkiln.ai"
requires-python = ">=3.10"
dependencies = [
    "kiln-server",
    "pillow>=11.0.0",
    "pystray>=0.19.5",
    "pyinstaller>=6.14",
    "scipy>=1.15.2",
    "appimage-builder==1.1.1.dev32+g2709a3b",
]


[tool.uv.sources]
kiln-server = { workspace = true }
appimage-builder = { git = "https://github.com/AppImageCrafters/appimage-builder.git", rev = "Continuous" }
